# norn-agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md
articles/: norns-agent-hackathon-2026.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_phase4_columns.py  0003_chat_user_level.py  0004_review_session_user_level.py  0005_users.py  0006_user_level_on_users.py  0007_growth_tables.py
backend/norn/: brand.py  cli.py  config.py  logging.py
backend/norn/agents/: __init__.py  context_builder.py  growth.py  growth_tasks.py  llm.py  orchestrator.py  personas.py  rag.py  reply_format.py  schemas.py  sk_group_chat.py  user_levels.py
backend/norn/api/: dependencies.py  main.py  middleware.py
backend/norn/api/routes/: auth.py  chat.py  dashboard.py  github.py  growth.py  reviews.py
backend/norn/api/signatures/: github.py
backend/norn/auth/: __init__.py  demo.py  session.py
backend/norn/db/: __init__.py  engine.py  models.py  repositories.py  users.py
backend/norn/events/: __init__.py  bus.py
backend/norn/github_tool/: __init__.py  builder.py  client.py  markdown.py  models.py  pr_ref.py  ruff_runner.py
backend/tests/: conftest.py  test_agents.py  test_chat.py  test_db.py  test_dependencies.py  test_github_signature.py  test_github_tool.py  test_pr_reply_flow.py  test_webhooks.py
backend/tests/fixtures/: github_issue_comment.json  github_issue_comment_norn.json  github_pull_request.json  github_pull_request_non_draft.json
demo/: draft-pr-trigger-2.txt  draft-pr-trigger.txt  sample-pr-diff.patch
deploy/: azure-deploy.sh  (+2 more)
(+62 files in other folders)
