[project]
name = "norn"
version = "0.1.0"
description = "Norn — multi-agent code review companion for early-career engineers"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.34",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "semantic-kernel>=1.18,<2.0",
    "PyGithub>=2.5,<3.0",
    "httpx>=0.27,<0.29",
    "python-multipart>=0.0.18",
    "tenacity>=9.0,<10.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<0.22",
    "alembic>=1.13,<2.0",
    "PyJWT>=2.9,<3.0",
    "bcrypt>=4.2,<5.0",
    "ruff>=0.8,<0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.26",
    "pytest-cov>=6.0,<7.0",
    "respx>=0.21,<0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["norn"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "ASYNC",
    "S",
    "RUF",
    "SIM",
    "TCH",
]
ignore = [
    "E501",
    "S101",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]
"norn/agents/growth.py" = ["TC001"]
"norn/agents/growth_tasks.py" = ["TC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["norn"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
